add jobs to github actions

--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -34,7 +34,7 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
       
-    - name: Deploy to staging
+    - name: Deploy nginx+php-fpm to staging
       uses: koslib/helm-eks-action@master
       env:
             KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
@@ -44,15 +44,70 @@ jobs:
     - name: Waiting run pods
       run: sleep 1
       
-    - name: Deployment status
+    - name: Deploy nginx+php-fpm status
       uses: koslib/helm-eks-action@master
       env:
             KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
       with:
         command: kubectl get deploy --namespace=lemp --output name | xargs -n1 -t kubectl rollout status --namespace=lemp
     
-  upload-data:
-    name: Upload data
+    - name: Deploying mysql
+      uses: koslib/helm-eks-action@master
+      env:
+            KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
+      with:
+          command: kubectl apply -f k8s/mysql/
+
+    - name: Deploying mysql
+      uses: koslib/helm-eks-action@master
+      env:
+            KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
+            NAMESPACE_app: database
+      with:
+          command: kubectl -n $NAMESPACE_app rollout status statefulset/mysql-set
+
+    - name: Update credentials
+      uses: koslib/helm-eks-action@master
+      env:
+            KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
+            NAMESPACE_app: database
+      with:
+          command: |
+                  kubectl apply -f vault/mysql-config.yml
+                  sleep 10
+                  logs=`kubectl logs --namespace=$NAMESPACE_app mysql-configuration mysql-container`
+                  if [ "$logs" = "Information in MySQL DB has changed. Congrats!" ]
+                  then
+                    echo $logs
+                    kubectl delete -f mysql-config.yml
+                  else
+                    echo $logs
+                    kubectl delete -f mysql-config.yml
+                    exit 2
+                  fi
+
+    - name: Upload database
+      uses: koslib/helm-eks-action@master
+      env:
+            KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
+            NAMESPACE_app: database
+      with:
+          command: |
+                  kubectl -f vault/mysql-upload.yml
+                  sleep 10
+                  logs=`kubectl logs --namespace=$NAMESPACE_app mysql-upload mysql-container`
+                  if [ "$logs" = "mysql-dump has been imported succesfully!" ]
+                  then
+                    echo $logs
+                    kubectl delete -f mysql-config.yml
+                  else
+                    echo $logs
+                    kubectl delete -f mysql-config.yml
+                    exit 2
+                  fi
+    
+  upload-files:
+    name: Upload files
     needs: deploy
     runs-on: ubuntu-latest
     environment: staging
